@@ -20,8 +20,12 @@
 
 package org.matsim.core.utils.io;
 
+import com.github.luben.zstd.ZstdInputStream;
+import com.github.luben.zstd.ZstdOutputStream;
 import net.jpountz.lz4.LZ4BlockInputStream;
 import net.jpountz.lz4.LZ4BlockOutputStream;
+import org.apache.commons.compress.compressors.CompressorException;
+import org.apache.commons.compress.compressors.CompressorStreamFactory;
 import org.apache.log4j.Logger;
 
 import java.io.BufferedInputStream;
@@ -29,7 +33,6 @@ import java.io.BufferedOutputStream;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
@@ -39,6 +42,7 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintStream;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -48,240 +52,344 @@ import java.nio.file.Path;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.Locale;
+import java.util.Map;
+import java.util.TreeMap;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.GZIPOutputStream;
 
-/** A class with some static utility functions for file-I/O. */
-public class IOUtils {
+/**
+ * This class provides helper methods for input/output in MATSim.
+ * 
+ * The whole I/O infrastructure is based on URLs, which allows more flexibility
+ * than String-based paths or URLs. The structure follows three levels: Stream
+ * level, writer/reader level, and convenience methods.
+ * 
+ * <h2>Stream level</h2>
+ * 
+ * The two main methods on the stream level are {@link #getInputStream(URL)} and
+ * {@link #getOutputStream(URL, boolean)}. Their use is rather obvious, the
+ * boolean argument of the output stream is whether it is an appending output
+ * stream. Depending on the extension of the reference file of the URL,
+ * compression will be detected automatically. See below for a list of active
+ * compression algorithms.
+ * 
+ * <h2>Reader/Writer level</h2>
+ * 
+ * Use {@link #getBufferedWriter(URL, Charset, boolean)} and its simplified
+ * versions to obtained a BufferedWriter object. Use
+ * {@link #getBufferedReader(URL)} to obtain a BufferedReader. These functions
+ * should be used preferredly, because they allow for future movements of files
+ * to servers etc.
+ * 
+ * <h2>Convenience methods</h2>
+ * 
+ * Two convenience methods exist: {@link #getBufferedReader(String)} and
+ * {@link #getBufferedReader(String)}, which take a String-based path as input.
+ * They intentionally do not allow for much flexibility (e.g. choosing the
+ * character set of the files). If this is needed, please use the reader/writer
+ * level methods and construct the URL via the helper functions that are
+ * documented below.
+ * 
+ * <h2>URL handling</h2>
+ * 
+ * To convert a file name to a URL, use {@link #getFileUrl(String)}. This is
+ * mostly useful to determine the URL for an output file. If you are working
+ * with input files, the best is to make use of
+ * {@link #resolveFileOrResource(String)}, which will first try to find a
+ * certain file in the file system and then in the class path (i.e. in the Java
+ * resources). This makes it easy to write versatile code that can work with
+ * local files and resources at the same time.
+ * 
+ * <h2>Compression</h2>
+ * 
+ * Compessed files are automatically assumed if ceraint file types are
+ * encountered. Currently, the following patterns match certain compression
+ * algorithms:
+ * 
+ * <ul>
+ * <li><code>*.gz</code>: GZIP compression</li>
+ * <li><code>*.lz4</code>: LZ4 compression</li>
+ * <li><code>*.bz2</code>: Bzip2 compression</li>
+ * <li><code>*.zst</code>: ZStandard compression</li>
+ * </ul>
+ */
+final public class IOUtils {
+	/**
+	 * This is only a static helper class.
+	 */
+	private IOUtils() {
+	}
 
-	private static final String GZ = ".gz";
-	private static final String LZ4 = ".lz4";
+	private enum CompressionType { GZIP, LZ4, BZIP2, ZSTD }
 
+	// Define compressions that can be used.
+	private static final Map<String, CompressionType> COMPRESSION_EXTENSIONS = new TreeMap<>();
+
+	static {
+		COMPRESSION_EXTENSIONS.put("gz", CompressionType.GZIP);
+		COMPRESSION_EXTENSIONS.put("lz4", CompressionType.LZ4);
+		COMPRESSION_EXTENSIONS.put("bz2", CompressionType.BZIP2);
+		COMPRESSION_EXTENSIONS.put("zstd", CompressionType.ZSTD);
+	}
+
+	// Define a number of charsets that are / have been used.
 	public static final Charset CHARSET_UTF8 = StandardCharsets.UTF_8;
 	public static final Charset CHARSET_WINDOWS_ISO88591 = StandardCharsets.ISO_8859_1;
 
+	// Define new line character depending on system
 	public static final String NATIVE_NEWLINE = System.getProperty("line.separator");
 
-	private final static Logger log = Logger.getLogger(IOUtils.class);
+	// Logger
+	private final static Logger logger = Logger.getLogger(IOUtils.class);
 
-
-	public static URL getUrlFromFileOrResource(String filename) {
-		if (filename.startsWith("~" + File.separator)) {
-			filename = System.getProperty("user.home") + filename.substring(1);
-		}
-
-		File file = new File(filename);
-		if (file.exists()) {
-			try {
-				return file.toURI().toURL();
-			} catch (MalformedURLException e) {
-				throw new RuntimeException(e);
+	/**
+	 * This function takes a path and tries to find the file in the file system or
+	 * in the resource path. The order of resolution is as follows:
+	 * 
+	 * <ol>
+	 * <li>Find path in file system</li>
+	 * <li>Find path in file system with compression extension (e.g. *.gz)</li>
+	 * <li>Find path in class path as resource</li>
+	 * <li>Find path in class path with compression extension</li>
+	 * </ol>
+	 *
+	 * In case the filename is a URL (i.e. starting with "file:" or "jar:file:"),
+	 * then no resolution is done but the provided filename returned as URL.
+	 * 
+	 * @throws UncheckedIOException
+	 */
+	public static URL resolveFileOrResource(String filename) throws UncheckedIOException {
+		try {
+			// I) do not handle URLs
+			if (filename.startsWith("jar:file:") || filename.startsWith("file:")) {
+				// looks like an URI
+				return new URL(filename);
 			}
-		}
-		log.info("String " + filename + " does not exist as file on the file system; trying it as a resource ...");
-		URL resourceAsStream = IOUtils.class.getClassLoader().getResource(filename);
-		if ( resourceAsStream==null ) {
-			throw new RuntimeException("Filename |" + filename + "| not found." ) ;
-		}
-		return resourceAsStream;
-	}
 
-	/**
-	 * Tries to open the specified file for reading and returns a BufferedReader for it.
-	 * Supports gzip-compressed files, such files are automatically decompressed.
-	 * If the file is not found, a gzip-compressed version of the file with the
-	 * added ending ".gz" will be searched for and used if found. Assumes that the text
-	 * in the file is stored in UTF-8 (without BOM).
-	 *
-	 * @param filename The file to read, may contain the ending ".gz" to force reading a compressed file.
-	 * @return BufferedReader for the specified file.
-	 * @throws UncheckedIOException
-	 *
-	 * <br> author mrieser
-	 */
-	public static BufferedReader getBufferedReader(final String filename) throws UncheckedIOException {
-		return getBufferedReader(filename, StandardCharsets.UTF_8);
-	}
+			// II) Replace home identifier
+			if (filename.startsWith("~" + File.separator)) {
+				filename = System.getProperty("user.home") + filename.substring(1);
+			}
 
-	public static BufferedReader getBufferedReader(final URL url) throws UncheckedIOException {
-		return getBufferedReader(url, StandardCharsets.UTF_8);
-	}
+			// III.1) First, try to find the file in the file system
+			File file = new File(filename);
 
-	/**
-	 * Tries to open the specified file for reading and returns a BufferedReader for it.
-	 * Supports gzip-compressed files, such files are automatically decompressed.
-	 * If the file is not found, a gzip-compressed version of the file with the
-	 * added ending ".gz" will be searched for and used if found.
-	 *
-	 * @param filename The file to read, may contain the ending ".gz" to force reading a compressed file.
-	 * @param charset the Charset of the file to read
-	 * @return BufferedReader for the specified file.
-	 * @throws UncheckedIOException
-	 *
-	 * <br> author mrieser
-	 */
-	public static BufferedReader getBufferedReader(final String filename, final Charset charset) throws UncheckedIOException {
-		BufferedReader infile = null;
-		if (filename == null) {
-			throw new UncheckedIOException(new FileNotFoundException("No filename given (filename == null)"));
-		}
-		try {
-			infile = new BufferedReader(new InputStreamReader(getInputStream(filename), charset));
-		} catch (UncheckedIOException e) {
-			log.fatal("encountered IOException.  This will most probably be fatal.  Note that for relative path names, the root is no longer the Java root, but the directory where the config file resides.");
+			if (file.exists()) {
+				logger.info(String.format("Resolved %s to %s", filename, file));
+				return file.toURI().toURL();
+			}
+
+			// III.2) Try to find file with an additional postfix for compression
+			for (String postfix : COMPRESSION_EXTENSIONS.keySet()) {
+				file = new File(filename + "." + postfix);
+
+				if (file.exists()) {
+					logger.info(String.format("Resolved %s to %s", filename, file));
+					return file.toURI().toURL();
+				}
+			}
+
+			// IV.1) First, try to find the file in the class path
+			URL resource = IOUtils.class.getClassLoader().getResource(filename);
+
+			if (resource != null) {
+				logger.info(String.format("Resolved %s to %s", filename, resource));
+				return resource;
+			}
+
+			// IV.2) Second, try to find the resource with a compression extension
+			for (String postfix : COMPRESSION_EXTENSIONS.keySet()) {
+				resource = IOUtils.class.getClassLoader().getResource(filename + "." + postfix);
+
+				if (resource != null) {
+					logger.info(String.format("Resolved %s to %s", filename, resource));
+					return resource;
+				}
+			}
+
+			throw new FileNotFoundException(filename);
+		} catch (FileNotFoundException | MalformedURLException e) {
 			throw new UncheckedIOException(e);
 		}
-
-		return infile;
 	}
 
-	public static BufferedReader getBufferedReader(final URL url, final Charset charset) throws UncheckedIOException {
-		BufferedReader infile = null;
-		if (url == null) {
-			throw new UncheckedIOException(new FileNotFoundException("No url given (url == null)"));
-		}
+	/**
+	 * Gets the compression of a certain URL by file extension. May return null if
+	 * not compression is assumed.
+	 */
+	private static CompressionType getCompression(URL url) {
+		String[] segments = url.getPath().split("\\.");
+		String lastExtension = segments[segments.length - 1];
+		return COMPRESSION_EXTENSIONS.get(lastExtension.toLowerCase(Locale.ROOT));
+	}
+
+	/**
+	 * Opens an input stream for a given URL. If the URL has a compression
+	 * extension, the method will try to open the compressed file using the proper
+	 * decompression algorithm.
+	 * 
+	 * @throws UncheckedIOException
+	 */
+	public static InputStream getInputStream(URL url) throws UncheckedIOException {
 		try {
-			infile = new BufferedReader(new InputStreamReader(getInputStream(url), charset));
-		} catch (UncheckedIOException e) {
-			log.fatal("encountered IOException.  This will most probably be fatal.  Note that for relative path names, the root is no longer the Java root, but the directory where the config file resides.");
+			InputStream inputStream = url.openStream();
+
+			CompressionType compression = getCompression(url);
+			if (compression != null) {
+				switch (compression) {
+					case GZIP:
+						inputStream = new GZIPInputStream(inputStream);
+						break;
+					case LZ4:
+						inputStream = new LZ4BlockInputStream(inputStream);
+						break;
+					case BZIP2:
+						inputStream = new CompressorStreamFactory().createCompressorInputStream(CompressorStreamFactory.BZIP2, inputStream);
+						break;
+					case ZSTD:
+						inputStream = new ZstdInputStream(inputStream);
+						break;
+				}
+			}
+
+			return new UnicodeInputStream(new BufferedInputStream(inputStream));
+		} catch (IOException | CompressorException e) {
 			throw new UncheckedIOException(e);
 		}
-
-		return infile;
 	}
 
-
 	/**
-	 * Tries to open the specified file for writing and returns a BufferedWriter for it.
-	 * Supports gzip-compression of the written data. The filename may contain the
-	 * ending ".gz". If no compression is to be used, the ending will be removed
-	 * from the filename. If compression is to be used and the filename does not yet
-	 * have the ending ".gz", the ending will be added to it.
-	 *
-	 * @param filename The filename where to write the data.
-	 * @param useCompression whether the file should be gzip-compressed or not.
-	 * @return BufferedWriter for the specified file.
+	 * Creates a reader for an input URL. If the URL has a compression extension,
+	 * the method will try to open the compressed file using the proper
+	 * decompression algorithm. A given character set is used for the reader.
+	 * 
 	 * @throws UncheckedIOException
 	 */
-	public static BufferedWriter getBufferedWriter(final String filename, final boolean useCompression) throws UncheckedIOException {
-		if (filename == null) {
-			throw new UncheckedIOException(new FileNotFoundException("No filename given (filename == null)"));
-		}
-		if (useCompression && !filename.endsWith(GZ)) {
-			return getBufferedWriter(filename + GZ);
-		} else if (!useCompression && filename.endsWith(GZ)) {
-			return getBufferedWriter(filename.substring(0, filename.length() - 3));
-		} else {
-			return getBufferedWriter(filename);
-		}
+	public static BufferedReader getBufferedReader(URL url, Charset charset) throws UncheckedIOException {
+		InputStream inputStream = getInputStream(url);
+		return new BufferedReader(new InputStreamReader(inputStream, charset));
 	}
 
-
 	/**
-	 * Tries to open the specified file for writing and returns a BufferedWriter for it.
-	 * If the filename ends with ".gz", data will be automatically gzip-compressed.
-	 * The data written will be encoded as UTF-8 (only relevant if you use Umlauts or
-	 * other characters not used in plain English).
-	 *
-	 * @param filename The filename where to write the data.
-	 * @return BufferedWriter for the specified file.
+	 * See {@link #getBufferedReader(URL, Charset)}. UTF-8 is assumed as the
+	 * character set.
+	 * 
 	 * @throws UncheckedIOException
 	 */
-	public static BufferedWriter getBufferedWriter(final String filename) throws UncheckedIOException {
-		return getBufferedWriter(filename, Charset.forName("UTF8"));
+	public static BufferedReader getBufferedReader(URL url) throws UncheckedIOException {
+		return getBufferedReader(url, CHARSET_UTF8);
 	}
 
-
 	/**
-	 * Tries to open the specified file for writing and returns a BufferedWriter for it.
-	 * If the filename ends with ".gz", data will be automatically gzip-compressed.
-	 * The data written will be encoded as UTF-8 (only relevant if you use Umlauts or
-	 * other characters not used in plain English). If the file already exists, content
-	 * will not be overwritten, but new content be appended to the file.
-	 *
-	 * @param filename The filename where to write the data.
-	 * @return BufferedWriter for the specified file.
+	 * Opens an output stream for a given URL. If the URL has a compression
+	 * extension, the method will try to open the compressed file using the proper
+	 * decompression algorithm. Note that compressed files cannot be appended and
+	 * that it is only possible to write to the file system (i.e. file:// protocol).
+	 * 
 	 * @throws UncheckedIOException
 	 */
-	public static BufferedWriter getAppendingBufferedWriter(final String filename) throws UncheckedIOException {
-		return getBufferedWriter(filename, Charset.forName("UTF8"), true);
-	}
-
-
-	/**
-	 * Tries to open the specified file for writing and returns a BufferedWriter for it.
-	 * If the filename ends with ".gz", data will be automatically gzip-compressed.
-	 *
-	 * @param filename The filename where to write the data.
-	 * @param charset the encoding to use to write the file.
-	 * @return BufferedWriter for the specified file.
-	 * @throws UncheckedIOException
-	 */
-	public static BufferedWriter getBufferedWriter(final String filename, final Charset charset) throws UncheckedIOException {
-		return getBufferedWriter(filename, charset, false);
-	}
-
-
-	/**
-	 * Tries to open the specified file for writing and returns a BufferedWriter for it.
-	 * If the filename ends with ".gz", data will be automatically gzip-compressed. If
-	 * the file already exists, content will not be overwritten, but new content be
-	 * appended to the file.
-	 *
-	 * @param filename The filename where to write the data.
-	 * @param charset the encoding to use to write the file.
-	 * @return BufferedWriter for the specified file.
-	 * @throws UncheckedIOException
-	 */
-	public static BufferedWriter getAppendingBufferedWriter(final String filename, final Charset charset) throws UncheckedIOException {
-		return getBufferedWriter(filename, charset, true);
-	}
-
-
-	/**
-	 * Tries to open the specified file for writing and returns a BufferedWriter for it.
-	 * If the filename ends with ".gz", data will be automatically gzip-compressed.
-	 *
-	 * @param filename The filename where to write the data.
-	 * @param charset the encoding to use to write the file.
-	 * @param append <code>true</code> if the file should be opened for appending, instead of overwriting
-	 * @return BufferedWriter for the specified file.
-	 * @throws UncheckedIOException
-	 */
-	public static BufferedWriter getBufferedWriter(final String filename, final Charset charset, final boolean append) throws UncheckedIOException {
-		if (filename == null) {
-			throw new UncheckedIOException(new FileNotFoundException("No filename given (filename == null)"));
-		}
+	@SuppressWarnings("resource")
+	public static OutputStream getOutputStream(URL url, boolean append) throws UncheckedIOException {
 		try {
-			return new BufferedWriter(new OutputStreamWriter(getOutputStream(filename, append), charset));
-		} catch (UncheckedIOException e) {
+			if (!url.getProtocol().equals("file")) {
+				throw new UncheckedIOException("Can only write to file:// protocol URLs");
+			}
+
+			File file = new File(url.toURI());
+			CompressionType compression = getCompression(url);
+
+			if (compression != null && append && file.exists()) {
+				throw new UncheckedIOException("Cannot append to compressed files.");
+			}
+
+			OutputStream outputStream = new FileOutputStream(file, append);
+
+			if (compression != null) {
+				switch (compression) {
+					case GZIP:
+						outputStream = new GZIPOutputStream(outputStream);
+						break;
+					case LZ4:
+						outputStream = new LZ4BlockOutputStream(outputStream);
+						break;
+					case BZIP2:
+						outputStream = new CompressorStreamFactory().createCompressorOutputStream(CompressorStreamFactory.BZIP2, outputStream);
+						break;
+					case ZSTD:
+						outputStream = new ZstdOutputStream(outputStream, 6);
+						break;
+				}
+			}
+
+			return new BufferedOutputStream(outputStream);
+		} catch (IOException | CompressorException | URISyntaxException e) {
 			throw new UncheckedIOException(e);
 		}
+	}
+
+	/**
+	 * Creates a writer for an output URL. If the URL has a compression extension,
+	 * the method will try to open the compressed file using the proper
+	 * decompression algorithm. Note that compressed files cannot be appended and
+	 * that it is only possible to write to the file system (i.e. file:// protocol).
+	 * 
+	 * @throws UncheckedIOException
+	 */
+	public static BufferedWriter getBufferedWriter(URL url, Charset charset, boolean append)
+			throws UncheckedIOException {
+		OutputStream outputStream = getOutputStream(url, append);
+		return new BufferedWriter(new OutputStreamWriter(outputStream, charset));
+	}
+
+	/**
+	 * See {@link #getBufferedWriter(URL, Charset, boolean)}. UTF-8 is assumed as
+	 * the character set and non-appending mode is used.
+	 * 
+	 * @throws UncheckedIOException
+	 */
+	public static BufferedWriter getBufferedWriter(URL url) throws UncheckedIOException {
+		return getBufferedWriter(url, CHARSET_UTF8, false);
+	}
+
+	/**
+	 * Wrapper function for {@link #getBufferedWriter(URL)} that creates a
+	 * PrintStream.
+	 * 
+	 * @throws UncheckedIOException
+	 */
+	public static PrintStream getPrintStream(URL url) throws UncheckedIOException {
+		return new PrintStream(getOutputStream(url, false));
 	}
 
 	/**
 	 * Copies the content from one stream to another stream.
 	 *
 	 * @param fromStream The stream containing the data to be copied
-	 * @param toStream The stream the data should be written to
-	 * @throws IOException
-	 *
-	 * <br> author mrieser
+	 * @param toStream   The stream the data should be written to
+	 * 
+	 * @throws UncheckedIOException
 	 */
-	public static void copyStream(final InputStream fromStream, final OutputStream toStream) throws IOException {
-		byte[] buffer = new byte[4096];
-		int bytesRead;
-		while ((bytesRead = fromStream.read(buffer)) != -1) {
-			toStream.write(buffer, 0, bytesRead);
+	public static void copyStream(final InputStream fromStream, final OutputStream toStream)
+			throws UncheckedIOException {
+		try {
+			byte[] buffer = new byte[4096];
+			int bytesRead;
+
+			while ((bytesRead = fromStream.read(buffer)) != -1) {
+				toStream.write(buffer, 0, bytesRead);
+			}
+		} catch (IOException e) {
+			throw new UncheckedIOException(e);
 		}
 	}
 
 	/**
+	 * Deletes a directory tree recursively. Should behave like rm -rf, i.e. there
+	 * should not be any accidents like following symbolic links.
 	 *
-	 * Deletes a directory tree recursively. Should behave like rm -rf, i.e. there should not be
-	 * any accidents like following symbolic links.
-	 *
-	 * @param path The directoy to be deleted
+	 * @param path The directory to be deleted
+	 * 
+	 * @throws UncheckedIOException
 	 */
 	public static void deleteDirectoryRecursively(Path path) throws UncheckedIOException {
 		try {
@@ -299,151 +407,23 @@ public class IOUtils {
 				}
 			});
 		} catch (IOException e) {
-			throw new UncheckedIOException(e.getMessage(), e);
+			throw new UncheckedIOException(e);
 		}
 	}
 
 	/**
-	 * Tries to open the specified file for reading and returns an InputStream for it.
-	 * Supports gzip-compressed files, such files are automatically decompressed.
-	 * If the file is not found, a gzip-compressed version of the file with the
-	 * added ending ".gz" will be searched for and used if found.
-	 *
-	 * @param filename The file to read, may contain the ending ".gz" to force reading a compressed file.
-	 * @return InputStream for the specified file.
+	 * Compares two InputStreams.
+	 * 
+	 * Source:
+	 * http://stackoverflow.com/questions/4245863/fast-way-to-compare-inputstreams
+	 * 
 	 * @throws UncheckedIOException
-	 *
-	 * <br> author dgrether
 	 */
-	public static InputStream getInputStream(final String filename) throws UncheckedIOException {
-		InputStream inputStream = null;
-		if (filename == null) {
-			throw new UncheckedIOException(new FileNotFoundException("No filename given (filename == null)"));
-		}
-		try {
-			// search in file system
-			if (new File(filename).exists()) {
-				if (filename.endsWith(GZ)) {
-					inputStream = new GZIPInputStream(new FileInputStream(filename));
-				}else if (filename.endsWith(LZ4)) {
-					inputStream = new UnicodeInputStream(new LZ4BlockInputStream(new FileInputStream(filename)));
-				} else {
-					inputStream = new FileInputStream(filename);
-				}
-			} else if (new File(filename + GZ).exists()) {
-				inputStream = new GZIPInputStream(new FileInputStream(filename + GZ));
-			}  else {
-				// search in classpath
-				InputStream stream = IOUtils.class.getClassLoader().getResourceAsStream(filename);
-				if (stream != null) {
-					if (filename.endsWith(GZ)) {
-						inputStream = new GZIPInputStream(stream);
-					}
-					else {
-						inputStream = stream;
-					}
-				} else {
-					stream = IOUtils.class.getClassLoader().getResourceAsStream(filename + GZ);
-					if (stream != null) {
-						inputStream = new GZIPInputStream(stream);
-					}
-				}
-				if (inputStream != null) {
-					log.info("streaming file from classpath: " + filename);
-				}
-			}
-			if (inputStream == null) {
-				throw new FileNotFoundException(filename);
-			}
-			return new BufferedInputStream(new UnicodeInputStream(inputStream));
-		} catch (IOException e) {
-			throw new UncheckedIOException(e);
-		}
-	}
-
-	public static InputStream getInputStream(URL url) throws UncheckedIOException {
-		try {
-			if (url.getFile().endsWith(".gz")) {
-				return new GZIPInputStream(url.openStream());
-			} else {
-				return url.openStream();
-			}
-		} catch (IOException e) {
-			throw new UncheckedIOException(e);
-		}
-	}
-	
-	public static OutputStream getOutputStream(final String filename) throws UncheckedIOException {
-		return getOutputStream(filename, false);
-	}
-
-	/**
-	 * Returns a buffered and optionally gzip-compressed output stream to the specified file.
-	 * If the given filename ends with ".gz", the written file content will be automatically 
-	 * compressed with the gzip-algorithm.
-	 * 
-	 * @throws UncheckedIOException if the file cannot be created.
-	 * 
-	 * <br> author mrieser
-	 */
-	public static OutputStream getOutputStream(final String filename, boolean append) throws UncheckedIOException {
-		if (filename == null) {
-			throw new UncheckedIOException(new FileNotFoundException("No filename given (filename == null)"));
-		}
-		try {
-			if (filename.toLowerCase(Locale.ROOT).endsWith(GZ)) {
-				File f = new File(filename);
-				if (append && f.exists() && (f.length() > 0)) {
-					throw new IllegalArgumentException("Appending to an existing gzip-compressed file is not supported.");
-				}
-				return new BufferedOutputStream(new GZIPOutputStream(new FileOutputStream(filename, append)));
-			} else if (filename.toLowerCase(Locale.ROOT).endsWith(LZ4)) {
-				File f = new File(filename);
-				if (append && f.exists() && (f.length() > 0)) {
-					throw new IllegalArgumentException("Appending to an existing lz4-compressed file is not supported.");
-				}
-				return new BufferedOutputStream(new LZ4BlockOutputStream(new FileOutputStream(filename)));
-			}else {
-				return new BufferedOutputStream(new FileOutputStream (filename, append));
-			}
-		} catch (IOException e) {
-			throw new UncheckedIOException(e);
-		}
-	}
-
-	/**
-	 * Copy of getOutputStream and then changed to correspond to the PrintStream signature.  Device to hopefully reduce FindBugs warnings.  kai, may'17
-	 * 
-	 * @param filename
-	 * @return
-	 */
-	public static PrintStream getPrintStream( final String filename ) {
-		if (filename == null) {
-			throw new UncheckedIOException(new FileNotFoundException("No filename given (filename == null)"));
-		}
-		try {
-			if (filename.toLowerCase(Locale.ROOT).endsWith(GZ)) {
-				return new PrintStream(new BufferedOutputStream(new GZIPOutputStream(new FileOutputStream(filename))));
-			} else {
-				return new PrintStream(new BufferedOutputStream(new FileOutputStream (filename))) ;
-			}
-		} catch (IOException e) {
-			throw new UncheckedIOException(e);
-		}
-	}
-
-	// Compares two InputStreams.
-	// Interestingly, StackOverflow claims that this naive way would be slow,
-	// but for me, it is OK and the fast alternative which is proposed there is 
-	// much slower, so I'm just doing it like this for now.
-
-	// http://stackoverflow.com/questions/4245863/fast-way-to-compare-inputstreams
-	public static boolean isEqual(InputStream i1, InputStream i2)
-			throws IOException {
+	public static boolean isEqual(InputStream first, InputStream second) throws UncheckedIOException {
 		try {
 			while (true) {
-				int fr = i1.read();
-				int tr = i2.read();
+				int fr = first.read();
+				int tr = second.read();
 
 				if (fr != tr) {
 					return false;
@@ -452,21 +432,71 @@ public class IOUtils {
 					return true; // EOF on both sides
 				}
 			}
-		} finally {
-			if (i1 != null) i1.close();
-			if (i2 != null) i2.close();
+		} catch (IOException e) {
+			throw new UncheckedIOException(e);
 		}
 	}
 
-	public static URL newUrl(URL context, String spec) {
+	/**
+	 * Returns a URL for a (not necessarily existing) file path.
+	 * 
+	 * @param filename File name.
+	 * 
+	 * @throws UncheckedIOException
+	 */
+	public static URL getFileUrl(String filename) throws UncheckedIOException {
 		try {
-			return new URL(context, spec);
+			return new File(filename).toURI().toURL();
 		} catch (MalformedURLException e) {
-			try {
-				return new File(spec).toURI().toURL();
-			} catch (MalformedURLException e1) {
-				throw new RuntimeException(e1);
-			}
+			throw new UncheckedIOException(e);
 		}
+	}
+
+	/**
+	 * Given a base URL, returns the extended URL.
+	 * 
+	 * @param context   Base URL, e.g. from the Config object.
+	 * @param extension Extended path specification.
+	 * 
+	 * @throws UncheckedIOException
+	 */
+	public static URL extendUrl(URL context, String extension) throws UncheckedIOException {
+		if (context == null) {
+			throw new IllegalArgumentException("Please use IOUtils.getFileUrl");
+		}
+
+		try {
+			return new URL(context, extension);
+		} catch (MalformedURLException e) {
+			// We cannot construct a URL for some reason (see respective unit test)
+			return getFileUrl(extension);
+		}
+	}
+
+	/**
+	 * Convenience wrapper, see {@link #getBufferedReader(URL, Charset)}.
+	 * 
+	 * Note, that in general you should rather use URLs and the respective
+	 * {@link #getBufferedReader(URL)} function. You can obtain URLs for your file
+	 * paths either using {@link #resolveFileOrResource(String)} for an existing
+	 * identifier for which it is not sure a priori whether it is a local file or a
+	 * URL.
+	 */
+	public static BufferedReader getBufferedReader(String filename) {
+		return getBufferedReader(resolveFileOrResource(filename));
+	}
+
+	/**
+	 * Convenience wrapper, see {@link #getBufferedWriter(URL, Charset, boolean)}.
+	 */
+	public static BufferedWriter getBufferedWriter(String filename) {
+		return getBufferedWriter(getFileUrl(filename));
+	}
+
+	/**
+	 * Convenience wrapper, see {@link #getBufferedWriter(URL, Charset, boolean)}.
+	 */
+	public static BufferedWriter getAppendingBufferedWriter(String filename) {
+		return getBufferedWriter(getFileUrl(filename), CHARSET_UTF8, true);
 	}
 }
